--- a/webapp/etc/nginx/conf.d/default.conf
+++ b/webapp/etc/nginx/conf.d/default.conf
@@ -20,6 +20,14 @@ server {
   client_max_body_size 10m;
   root /public/;
 
+  location /css/ {
+    expires 30d;
+  }
+
+  location /js/ {
+    expires 30d;
+  }
+
   location / {
     proxy_set_header Host $host;
     proxy_pass http://app:8080;
