Nginxのチューニング（現時点では画像が静的でないので恩恵なし）

--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   nginx:
-    image: nginx:1.22
+    build: etc/nginx/
     volumes:
       - ./etc/nginx/conf.d:/etc/nginx/conf.d
       - ./public:/public
