goのwebappの画像の保存先をnginxのpublicフォルダ内に格納

--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - memcached
     volumes:
       - ./public:/home/public
+      - ./public/images:/home/webapp/public
     init: true
     deploy:
       resources:
