静的コンテンツをめちゃくちゃキャッシュ

--- a/webapp/etc/nginx/conf.d/default.conf
+++ b/webapp/etc/nginx/conf.d/default.conf
@@ -4,11 +4,23 @@ server {
     client_max_body_size 10m;
     root /public/;
 
+    location /image/ {
+        expires 30d;
+    }
+
+    location /img/ {
+        expires 30d;
+    }
+
     location /css/ {
         expires 30d;
     }
 
     location /js/ {
+        expires 30d;
+    }
+
+    location /favicon.ico {
         expires 30d;
     }
 
